# vars

./: Cargo.toml  READMD.md  README.md
config/: default.toml
migrations/: 20230101103712_init.down.sql  20230101103712_init.up.sql  20230103060923_add-roles.down.sql  20230103060923_add-roles.up.sql
src/: cli.rs  database.rs  errors.rs  logger.rs  main.rs  settings.rs
src/api/: article.rs  auth.rs  category.rs  mod.rs  tag.rs  user.rs
src/models/: article.rs  article_tag.rs  category.rs  comment.rs  mod.rs  reply.rs  role.rs  tag.rs  user.rs
src/router/: mod.rs
src/utils/: avatar.rs  hash.rs  jwt.rs
