[package]
name = "vars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.6"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql", "chrono" ] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.6"
chrono = { version = "0.4", features = ["serde"]}

# password hash
argon2 = { version = "0.4", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }

# error handler
anyhow = "1.0"
thiserror = "1.0"
