[package]
name = "vars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.6", features = [ "headers" ] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql", "chrono" ] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.6"
chrono = { version = "0.4", features = ["serde"]}

# password hash
argon2 = { version = "0.4", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.20"
blake2 = "0.10"

# error handler
anyhow = "1.0"
thiserror = "1.0"

# auth
jsonwebtoken = "8.2.0"
